@@ -1,32 +1,30 @@
-Mad Dog Backup System's was initially tested successfully on
-Alpha FreeBSD 4.11 and Alpha FreeBSD 5.4 using gcc versions
-2.95.4 20020320 and 3.4.2 20040728.
+Apache
 
-As of 11/21/2007, Mad Dog Backup System was successfully deployed
-on Debian Sparc64 using gcc version 4.1.2 20061115.
+1. Please remove Indexes from the <Directory DocumentRoot>.
 
-As of 02/08/2014, Mad Dog Backup System was deployed on Debian x86_64
-using gcc 4.6.3.
+Perl
 
-1.  Installation requires Perl. Please determine where Perl resides on your
-    system and modify the install.pl and upload_script.pl files accordingly.
-2.  Modify the USERS.dat file.
-3.  Please run the install.pl script from Mad Dog Backup System's
+1. Please install Perl. Perl modules required by the upload_script.pl
+   file include: libfile-mmagic-perl, libhttp-browserdetect-perl.
+2. Please install Upload.pm from CGI-Upload-1.11/lib/CGI into Perl's
+   CGI directory.
+3. Verify that the upload_script.pl executes correctly.
+
+Mad Dog Backup System
+
+1.  Modify the USERS.dat file.
+2.  Please execute the install.pl script from Mad Dog Backup System's
     source directory.
-4.  If you would like deleted files to be removed by the system,
+3.  If you would like deleted files to be removed by the system,
     please copy and modify the maddog_backup_delete.sh script as well as your
     system's crontab file.
-5.  You may use the maddog_backup_tmp_removal.sh script to automatically
+4.  You may use the maddog_backup_tmp_removal.sh script to automatically
     log out users after a period of time. You'll also have to modify
     your system's crontab file.
-6.  Modify the index.sample.html file, rename it to index.html, and
+5.  Modify the index.sample.html file, rename it to index.html, and
     place it in Mad Dog Backup System's home directory.
-7.  Modify Makefile accordingly.
-8.  Modify the variable upload_dir in the upload_script.pl file accordingly.
-9.  Execute make and make install.
-10. If desired, the directory /var/www/maddog-backup.d may be configured as
+6.  Modify Makefile accordingly.
+7.  Modify the variable upload_dir in the upload_script.pl file accordingly.
+8.  Execute make and make install.
+9.  If desired, the directory /var/www/maddog-backup.d may be configured as
     a symbolic link.
-11  For Apache, you should remove Indexes from the <Directory DocumentRoot>.
-12. Upload.pm should be installed under Perl's CGI sub-directory.
-13. Install libfile-mmagic-perl and libhttp-browserdetect-perl.
-14. Test.
