@@ -1,0 +1,5 @@
+Completed Items
+
+Remaining Items
+
+1.  Passwords are stored as plaintexts.
